added links to buttons

--- a/live-request-field.html
+++ b/live-request-field.html
@@ -72,7 +72,7 @@
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
-                  href="create-post.html"
+                  href="./create-post.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -88,7 +88,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -104,7 +104,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="show-all.html"
+                  href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -280,6 +280,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -310,6 +311,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -340,6 +342,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -370,6 +373,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -400,6 +404,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -430,6 +435,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
@@ -460,6 +466,7 @@
                     </p>
                   </div>
                   <a
+                    href="./live-request-field_detials.html"
                     class="bg-clr_blue text-sm py-2 px-4 text-white rounded-lg hover:shadow-btn mt-6 md:mt-0"
                   >
                     View Details
