--- a/live-request.html
+++ b/live-request.html
@@ -72,7 +72,7 @@
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
-                  href="create-post.html"
+                  href="./create-post.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -88,7 +88,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -104,7 +104,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="show-all.html"
+                  href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -173,7 +173,7 @@
 
                 <div class="user flex gap-5 items-center">
                   <a
-                    href="account.html"
+                    href="./account.html"
                     class="hover:shadow-btn hidden md:block"
                   >
                     <img
@@ -183,7 +183,7 @@
                     />
                   </a>
                   <a
-                    href="profile.html"
+                    href="./profile.html"
                     class="hover:shadow-btn rounded-full hidden md:block"
                   >
                     <img
@@ -244,104 +244,143 @@
               <div class="border-b-[0.5px] opacity-60 mt-2 mb-6"></div>
 
               <div class="lg:w-[54.5rem] w-[90%] mx-auto flex flex-wrap gap-3">
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">
                     knowledge work
                   </p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">
                     group-held knowledge
                   </p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">value</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">records</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">korolev</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">ios</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">react</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">
                     Objective C
                   </p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">html</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">Scala</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">
                     interaction
                   </p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">FP</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
 
-                <div class="bg-white w-[13rem] py-4 px-5 rounded-lg">
+                <a
+                  href="./live-request-field.html"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                >
                   <p class="text-clr_black text-sm font-semibold">exchange</p>
                   <p class="text-clr_black text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
-                </div>
+                </a>
               </div>
             </div>
           </div>
