--- a/dash.html
+++ b/dash.html
@@ -72,7 +72,7 @@
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
-                  href="create-post.html"
+                  href="./create-post.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -88,7 +88,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -104,7 +104,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="show-all.html"
+                  href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -260,7 +260,7 @@
                   <button
                     class="bg-clr_blue w-[90%] text-xs py-2 px-5 mt-5 text-white rounded-xl hover:shadow-btn font-semibold"
                   >
-                    <a href=""> Go to meeting details </a>
+                    <a href="./goto-meeting.html"> Go to meeting details </a>
                   </button>
                 </div>
 
@@ -316,7 +316,7 @@
                   <button
                     class="bg-clr_blue w-[90%] text-xs py-2 px-5 mt-5 text-white rounded-xl hover:shadow-btn font-semibold"
                   >
-                    <a href=""> Go to meeting details </a>
+                    <a href="./goto-meeting.html"> Go to meeting details </a>
                   </button>
                 </div>
 
