--- a/dashboard.html
+++ b/dashboard.html
@@ -17,10 +17,10 @@
   </head>
 
   <body>
-    <main class="w-full min-h-screen bg-[#F7F8FB]">
+    <main class="w-full min-h-screen bg-[#F7F8FB] overflow-hidden">
       <div class="flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:relative md:top-0 md:left-0 md:w-[16rem] lg:w-80 transition-all ease-in"
+          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -31,11 +31,11 @@
           </button>
 
           <nav
-            class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
+            class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
               <a href="dashboard.html">
-                <figure class="w-full px-5 py-6">
+                <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
                     alt="Company Logo"
@@ -72,7 +72,7 @@
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
-                  href="create-post.html"
+                  href="./create-post.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -88,7 +88,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -104,7 +104,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="show-all.html"
+                  href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -152,6 +152,10 @@
               </li>
             </ul>
           </nav>
+
+          <div
+            class="absolute -z-10 -right-2 bottom-0 bg-[#33D9EF] w-4 h-4 rounded-full animtaion-infinite"
+          ></div>
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
