--- a/goto-meeting.html
+++ b/goto-meeting.html
@@ -72,7 +72,7 @@
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
-                  href="create-post.html"
+                  href="./create-post.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -88,7 +88,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -104,7 +104,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -120,7 +120,7 @@
 
               <li>
                 <a
-                  href="show-all.html"
+                  href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -234,14 +234,12 @@
                 <div class="min-h-[70vh] flex justify-between">
                   <div class="w-[60%] bg-orange-600">
                     <button
-                    class="bg-clr_blue text-xs lg:text-sm py-2 px-3 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto"
-                  >
-                    Back
-                  </button>
+                      class="bg-clr_blue text-xs lg:text-sm py-2 px-3 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto"
+                    >
+                      Back
+                    </button>
 
-                  <div>
-                      
-                  </div>
+                    <div></div>
                   </div>
                   <div class="w-[36%] bg-yellow-400"></div>
                 </div>
