--- a/search-detail.html
+++ b/search-detail.html
@@ -76,7 +76,7 @@
             <ul class="flex-1 flex flex-col">
               <li>
                 <a
-                  href="create-post.html"
+                  href="./create-post.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -92,7 +92,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -108,7 +108,7 @@
 
               <li>
                 <a
-                  href=""
+                  href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
@@ -124,7 +124,7 @@
 
               <li>
                 <a
-                  href="show-all.html"
+                  href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
                   <img
