created a page and made some fixes in dashboard

--- a/live-request-field.html
+++ b/live-request-field.html
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -166,12 +166,12 @@
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -214,7 +214,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-10 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -226,9 +226,9 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm font-light">
-                PairTime <span class="font-extrabold">></span> Live requests
-                <span class="font-extrabold">></span> ios
+              <p class="text-clr_black text-xs lg:text-sm">
+                PairTime <span class="font-light">></span> Live requests
+                <span class="font-light">></span> ios
               </p>
               <div
                 class="flex flex-col md:flex-row justify-between items-center mt-4 md:mt-0"
@@ -303,7 +303,7 @@
                     </div>
                   </div>
                   <div>
-                    <p class="text-xs pb-1">
+                    <p class="text-xs pb-1 font-normal">
                       Price Range: <span class="font-light">€ -80/h</span>
                     </p>
                     <p class="text-xs">
