--- a/live-request.html
+++ b/live-request.html
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -102,7 +102,26 @@
                 </a>
               </li>
 
-              <li>
+              <li class="relative">
+                <a href="create-post.html">
+                  <div
+                    class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
+                  ></div>
+                  <button
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
+                  >
+                    <img
+                      src="./utils/images/icon-12.svg"
+                      alt="Icon"
+                      loading="lazy"
+                      class="brightness-0 invert"
+                    />
+                    Live Request
+                  </button>
+                </a>
+              </li>
+
+              <!-- <li>
                 <a
                   href="./live-request.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
@@ -116,7 +135,7 @@
                     >Live Request</span
                   >
                 </a>
-              </li>
+              </li> -->
 
               <li>
                 <a
@@ -155,12 +174,12 @@
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -203,7 +222,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-10 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -215,8 +234,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm font-light">
-                PairTime <span class="font-extrabold">></span> Live requests
+              <p class="text-clr_black text-xs lg:text-sm">
+                PairTime <span class="font-light">></span> Live requests
               </p>
               <div
                 class="flex flex-col md:flex-row justify-between items-center mt-4 md:mt-0"
@@ -246,7 +265,7 @@
               <div class="lg:w-[54.5rem] w-[90%] mx-auto flex flex-wrap gap-3">
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">
                     knowledge work
@@ -258,7 +277,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">
                     group-held knowledge
@@ -270,7 +289,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">value</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -280,7 +299,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">records</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -290,7 +309,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">korolev</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -300,7 +319,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">ios</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -310,7 +329,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">react</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -320,7 +339,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">
                     Objective C
@@ -332,7 +351,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">html</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -342,7 +361,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">Scala</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -352,7 +371,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">
                     interaction
@@ -364,7 +383,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">FP</p>
                   <p class="text-clr_black text-xs pt-2">
@@ -374,7 +393,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg"
+                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_black text-sm font-semibold">exchange</p>
                   <p class="text-clr_black text-xs pt-2">
