--- a/account.html
+++ b/account.html
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -159,12 +159,12 @@
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -177,17 +177,27 @@
 
                 <div class="user flex gap-5 items-center">
                   <a
-                    href="account.html"
-                    class="hover:shadow-btn hidden md:block"
+                    href="./account.html"
+                    class="hover:shadow-btn hidden md:block relative rounded-full"
                   >
-                    <img
-                      src="./utils/images/icon-17.svg"
-                      alt="Icon"
-                      loading="lazy"
-                    />
+                    <figure class="absolute top-[15%] left-[25%] z-10">
+                      <img
+                        src="./utils/images/icon-account-white.svg"
+                        alt="Icon"
+                        loading="lazy"
+                      />
+                    </figure>
+
+                    <figure>
+                      <img
+                        src="./utils/images/circle-blue.svg"
+                        alt=""
+                        class="h-12 w-12"
+                      />
+                    </figure>
                   </a>
                   <a
-                    href="profile.html"
+                    href="./profile.html"
                     class="hover:shadow-btn rounded-full hidden md:block"
                   >
                     <img
@@ -207,7 +217,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -219,8 +229,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 pb-8">
-              <p class="text-clr_black text-xs lg:text-sm font-light">
-                PairTime <span class="font-extrabold">></span> Account
+              <p class="text-clr_black text-xs lg:text-sm">
+                PairTime <span class="font-light">></span> Account
               </p>
               <p
                 class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-4"
