--- a/create-post.html
+++ b/create-post.html
@@ -38,7 +38,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -74,19 +74,22 @@
             ></div>
 
             <ul class="flex-1 flex flex-col">
-              <li>
-                <a
-                  href="./create-post.html"
-                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
-                >
-                  <img
-                    src="./utils/images/icon-10.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                  <span class="ml-2 text-xs lg:text-sm font-medium"
-                    >Create A Post</span
+              <li class="relative">
+                <a href="create-post.html" class="bg-green-600">
+                  <div
+                    class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
+                  ></div>
+                  <button
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-4 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
                   >
+                    <img
+                      src="./utils/images/icon-10.svg"
+                      alt="Icon"
+                      loading="lazy"
+                      class="brightness-0 invert"
+                    />
+                    Create A Post
+                  </button>
                 </a>
               </li>
 
@@ -163,12 +166,12 @@
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -181,14 +184,24 @@
 
                 <div class="user flex gap-5 items-center">
                   <a
-                    href="account.html"
-                    class="hover:shadow-btn hidden md:block"
+                    href="./account.html"
+                    class="hover:shadow-btn hidden md:block relative rounded-full"
                   >
-                    <img
-                      src="./utils/images/icon-17.svg"
-                      alt="Icon"
-                      loading="lazy"
-                    />
+                    <figure class="absolute top-[15%] left-[25%] z-10">
+                      <img
+                        src="./utils/images/icon-account-white.svg"
+                        alt="Icon"
+                        loading="lazy"
+                      />
+                    </figure>
+
+                    <figure>
+                      <img
+                        src="./utils/images/circle-blue.svg"
+                        alt=""
+                        class="h-12 w-12"
+                      />
+                    </figure>
                   </a>
                   <a
                     href="profile.html"
@@ -211,7 +224,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -223,8 +236,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm font-light">
-                PairTime <span class="font-extrabold">></span> Post a request
+              <p class="text-clr_black text-xs lg:text-sm">
+                PairTime <span class="font-light">></span> Post a request
               </p>
 
               <div class="flex justify-between items-center">
@@ -305,28 +318,19 @@
                         class="placeholder:text-clr_gray_light placeholder:text-xs px-3 py-3 rounded-lg"
                       />
                     </div>
-                    <div class="relative">
+                    <div class="w-[15rem] relative">
                       <select
-                        class="block appearance-none w-full bg-white placeholder:text-clr_gray_light text-xs rounded-lg px-3 py-4"
+                        class="py-4 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none"
                       >
                         <option>Asia/Karachi (currently +5:00)</option>
-                        <option>Asia/islamabad (currently +5:00)</option>
-                        <option>Africa/Abidjan (Canonica +00:00)</option>
-                        <option>Africa/Addis_Ababa (Link +03:00)</option>
+                        <option>Asia/Karachi (currently +5:00)</option>
+                        <option>Asia/Karachi (currently +5:00)</option>
                       </select>
-                      <div
-                        class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-clr_gray_light"
+                      <span
+                        class="drop-icon absolute right-2 top-[18%] bg-white px-2 pointer-events-none"
                       >
-                        <svg
-                          class="fill-current h-4 w-4"
-                          xmlns="http://www.w3.org/2000/svg"
-                          viewBox="0 0 20 20"
-                        >
-                          <path
-                            d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                          />
-                        </svg>
-                      </div>
+                        <i class="fas fa-sort-down"></i>
+                      </span>
                     </div>
                   </div>
                 </div>
@@ -336,7 +340,7 @@
                 ></div>
 
                 <div class="flex flex-col md:flex-row justify-between pt-8">
-                  <div class="schedular w-full md:w-[60%]">
+                  <div class="schedular w-full md:w-[61%]">
                     <div
                       class="schedular-calendar"
                       id="demo-desktop-day-view"
@@ -345,7 +349,7 @@
 
                   <div class="right-side w-full md:w-[36%] pt-2">
                     <p
-                      class="text-clr_blue_light text-xs font-semibold leading-6"
+                      class="text-clr_blue_light text-xs font-semibold leading-6 mt-3"
                     >
                       You can make changes by interacting with the graphic
                       interface on the left side.
@@ -473,15 +477,11 @@
                             <div
                               class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-clr_gray_light"
                             >
-                              <svg
-                                class="fill-current h-4 w-4"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 20 20"
+                              <span
+                                class="drop-icon absolute right-1 top-[18%] bg-white px-2 pointer-events-none"
                               >
-                                <path
-                                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                                />
-                              </svg>
+                                <i class="fas fa-sort-down"></i>
+                              </span>
                             </div>
                           </div>
                         </div>
@@ -509,7 +509,12 @@
                               <div
                                 class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-clr_gray_light"
                               >
-                                <svg
+                                <span
+                                  class="drop-icon absolute right-1 top-[18%] bg-white px-2 pointer-events-none"
+                                >
+                                  <i class="fas fa-sort-down"></i>
+                                </span>
+                                <!-- <svg
                                   class="fill-current h-4 w-4"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewBox="0 0 20 20"
@@ -517,7 +522,7 @@
                                   <path
                                     d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
                                   />
-                                </svg>
+                                </svg> -->
                               </div>
                             </div>
 
@@ -543,7 +548,12 @@
                               <div
                                 class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-clr_gray_light"
                               >
-                                <svg
+                                <span
+                                  class="drop-icon absolute right-1 top-[18%] bg-white px-2 pointer-events-none"
+                                >
+                                  <i class="fas fa-sort-down"></i>
+                                </span>
+                                <!-- <svg
                                   class="fill-current h-4 w-4"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewBox="0 0 20 20"
@@ -551,7 +561,7 @@
                                   <path
                                     d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
                                   />
-                                </svg>
+                                </svg> -->
                               </div>
                             </div>
                           </div>
@@ -559,11 +569,11 @@
                       </div>
                     </div>
                   </div>
-                  <div
+                  <!-- <div
                     class="half-circle absolute right-0 mt-12 animtaion-infinite"
                   >
                     <img src="./utils/images/half-circle.png" />
-                  </div>
+                  </div> -->
                 </div>
                 <div class="mt-10">
                   <p class="text-clr_black text-xl font-semibold pb-5 flex-1">
@@ -618,6 +628,10 @@
               </form>
             </div>
           </div>
+
+          <div
+            class="half-circle bg-[#F48C06] w-24 h-24 fixed top-[50%] -right-20 lg:-right-20 rounded-full animtaion-infinite"
+          ></div>
         </section>
       </div>
     </main>
