--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -152,19 +152,15 @@
               </li>
             </ul>
           </nav>
-
-          <div
-            class="absolute -z-10 -right-2 bottom-0 bg-[#33D9EF] w-4 h-4 rounded-full animtaion-infinite"
-          ></div>
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -207,7 +203,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
