--- a/donate.html
+++ b/donate.html
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -158,13 +158,15 @@
           ></div>
         </aside>
 
-        <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+        <section
+          class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen overflow-hidden"
+        >
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -207,7 +209,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -219,9 +221,9 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm font-light">
-                PairTime <span class="font-extrabold">></span> Account
-                <span class="font-extrabold">></span> Donate
+              <p class="text-clr_black text-xs lg:text-sm">
+                PairTime <span class="font-light">></span> Account
+                <span class="font-light">></span> Donate
               </p>
               <p
                 class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-4"
@@ -268,14 +270,10 @@
             </div>
           </div>
 
-          <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-          <!-- <div
-            class="absolute -left-4 -bottom-4 bg-[#33D9EF] w-8 h-8 rounded-full"
-          ></div> -->
+          <!-- circle design -->
           <div
-            class="bg-[#F48C06] w-24 h-24 fixed top-[40%] -right-20 lg:-right-10 rounded-full animtaion-infinite"
+            class="bg-[#F48C06] md:w-28 md:h-28 w-20 h-20 absolute -bottom-12 -right-12 rounded-full animtaion-infinite"
           ></div>
-          <!-- </div> -->
         </section>
       </div>
     </main>
