--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             class="flex flex-col items-center mt-32 md:mt-0 md:justify-between md:flex-row md:items-center gap-6 md:gap-10"
           >
             <li class="md:text-sm text-lg hover:text-orange-500">
-              <a href="">Live Requests</a>
+              <a href="./live-request.html">Live Requests</a>
             </li>
             <li class="md:text-sm text-lg hover:text-orange-500">
-              <a href="show-all.html">Visible Profiles</a>
+              <a href="./visible-profile.html">Visible Profiles</a>
             </li>
             <li class="md:text-sm text-lg hover:text-orange-500">
               <a href="">User Group Slack</a>
             </li>
-            <a href="./dashboard">
+            <a href="./dashboard.html">
               <li
                 class="rounded-[3rem] md:px-8 px-10 py-1 sm:py-2 bg-[#F48C06] text-white md:text-sm text-lg shadow-lg hover:scale-105 active:scale-[0.8] transition ease-in-out"
               >
@@ -486,7 +486,10 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 offer-para">
+                <p
+                  class="text-xs sm:text-base flex-1 offer-para"
+                  id="offer-para-1"
+                >
                   You need a service profile besides your base profile to
                   receive relevant recommendations.
                 </p>
@@ -503,7 +506,10 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 offer-para">
+                <p
+                  class="text-xs sm:text-base flex-1 offer-para"
+                  id="offer-para-2"
+                >
                   You don't need a billing profile to start providing paid
                   services. You can't cash out until you have finished the
                   verification steps.
@@ -521,7 +527,10 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 offer-para">
+                <p
+                  class="text-xs sm:text-base flex-1 offer-para"
+                  id="offer-para-3"
+                >
                   You can see new requests that match your service profile under
                   "View service requests". You can also browse all live posts if
                   you want.
@@ -539,7 +548,10 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 offer-para">
+                <p
+                  class="text-xs sm:text-base flex-1 offer-para"
+                  id="offer-para-4"
+                >
                   You can submit your offers to requests that you want to help
                   with. When your offer has been accepted, the pairing session
                   is scheduled and you will get an email with an event calendar.
@@ -557,7 +569,10 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 offer-para">
+                <p
+                  class="text-xs sm:text-base flex-1 offer-para"
+                  id="offer-para-5"
+                >
                   After the session, credits will immediately move from your
                   pair's account to yours if there is enough balance. The amount
                   is calculated based on the actual meeting time and your hourly
@@ -579,7 +594,10 @@
                     class="h-full w-full"
                   />
                 </figure>
-                <p class="text-xs sm:text-base flex-1 offer-para">
+                <p
+                  class="text-xs sm:text-base flex-1 offer-para"
+                  id="offer-para-6"
+                >
                   When you cash out, we immediately send a recipient created
                   invoice to you, but you will receive the money (including tax
                   whenever applicable) on your bank account in about a week
@@ -617,13 +635,11 @@
           >
             <div class="w-[100%]">
               <div class="build-info-img relative">
-                <div
-                  class="flex items-center absolute bottom-[20%] sm:bottom-[25%]"
-                >
+                <div class="flex items-center md:translate-y-64 translate-y-40">
                   <div>
                     <button
                       data-aos="zoom-in"
-                      class="bg-[#3465E1] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 cursor-pointer mr-1 sm:mr-3 hover:border-[0.375rem] hover:border-[translate] hover:scale-105 transition ease-in-out"
+                      class="bg-[#3465E1] text-xs sm:text-base font-bold text-white rounded-[5rem] tracking-wider sm:w-[123px] w-[5rem] py-2 cursor-pointer mr-1 sm:mr-3 hover:border-[0.375rem] hover:scale-105 transition ease-in-out"
                       id="present-btn"
                     >
                       Present
@@ -691,7 +707,7 @@
               class="flex items-center justify-center lg:justify-start uppercase tracking-[2px] text-xs sm:text-base"
             >
               <span
-                class="w-20 h-[0.05rem] lg:block hidden bg-gray-400 mr-10"
+                class="w-12 h-[0.05rem] lg:block hidden bg-gray-400 mr-6"
               ></span>
               Testimonial
             </h4>
@@ -729,10 +745,10 @@
             class="relative overflow-hidden sm:w-[35rem] w-[19rem] mx-auto"
           >
             <button
-              class="absolute h-[6rem] w-[6rem] top-[22%] left-[50%] z-50 border-none outline-none md:translate-x-10"
+              class="absolute h-[2.5rem] w-[2.5rem] top-[30%] left-[55%] z-50 border-none outline-none md:translate-x-10 bg-white rounded-full text-2xl text-[#2584ED] shadow-clientIcon"
               id="carousel-btn"
             >
-              <img src="./utils/images/icon-3.svg" alt="icon" loading="lazy" />
+              >
             </button>
 
             <div
@@ -1048,6 +1064,7 @@
               client: "2px 3px 30px rgba(41, 44, 124, 0.1)",
               client_sm: "1px 1px 10px rgba(41, 44, 124, 0.1)",
               iconSocial: "0px 2px 10px rgba(0, 0, 0, 0.1)",
+              clientIcon: "0px 4px 60px rgba(41, 44, 124, 0.15)",
               guyPhone:
                 "0px 92.691px 190.916px rgba(0, 0, 0, 0.07), 0px 34.2227px 72.2657px rgba(0, 0, 0, 0.0529883), 0px 14.8528px 33.8133px rgba(0, 0, 0, 0.0474983), 0px 6.04018px 15.9177px rgba(0, 0, 0, 0.0432167), 0px 1.8272px 6.64643px rgba(0, 0, 0, 0.0377011), 0px 0.132325px 1.94727px rgba(0, 0, 0, 0.0279548)",
             },
