--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -159,12 +159,12 @@
         </aside>
 
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
-          <div class="w-[90%] mx-auto">
+          <div class="w-[95%] mx-auto">
             <div
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -177,7 +177,7 @@
 
                 <div class="user flex gap-5 items-center">
                   <a
-                    href="account.html"
+                    href="./account.html"
                     class="hover:shadow-btn hidden md:block"
                   >
                     <img
@@ -187,16 +187,27 @@
                     />
                   </a>
                   <a
-                    href="profile.html"
-                    class="hover:shadow-btn rounded-full hidden md:block"
+                    href="./profile.html"
+                    class="hover:shadow-btn rounded-full hidden md:block relative"
                   >
-                    <img
-                      src="./utils/images/user-photo.png"
-                      alt="User Photo"
-                      loaindg="lazy"
-                      class="lg:h-10 lg:w-10 h-8 w-8"
-                    />
+                    <figure class="absolute top-[11%] left-[12%] z-10">
+                      <img
+                        src="./utils/images/user-photo.png"
+                        alt="Icon"
+                        loading="lazy"
+                        class="lg:h-10 lg:w-10 h-8 w-8"
+                      />
+                    </figure>
+
+                    <figure>
+                      <img
+                        src="./utils/images/circle-blue.svg"
+                        alt=""
+                        class="h-13 w-13"
+                      />
+                    </figure>
                   </a>
+
                   <button class="text-clr_blue md:hidden">
                     <i class="fas fa-bars text-xl" id="dashb-nav-openBtn"></i>
                   </button>
@@ -207,7 +218,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -219,8 +230,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_black text-xs lg:text-sm font-light">
-                PairTime <span class="font-extrabold">></span> Profile
+              <p class="text-clr_black text-xs lg:text-sm">
+                PairTime <span class="font-light">></span> Profile
               </p>
               <p
                 class="text-clr_black text-base lg:text-xl font-semibold mt-2 mb-10"
@@ -295,7 +306,7 @@
                         />
                         <div class="md:w-3/7 w-full relative">
                           <select
-                            class="py-3 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none"
+                            class="py-3 px-3 rounded-lg text-xs text-clr_black w-full appearance-none"
                           >
                             <option>Asia/Karachi (currently +5:00)</option>
                             <option>Asia/Karachi (currently +5:00)</option>
@@ -311,11 +322,12 @@
                     </div>
 
                     <div class="btns flex gap-2 md:justify-end -mt-2 md:mt-10">
-                      <button
+                      <a
+                        href="./dashboard-update.html"
                         class="bg-clr_blue text-sm py-2 px-5 text-white rounded-xl md:mr-2 font-semibold hover:shadow-btn w-1/2 md:w-auto"
                       >
                         Update
-                      </button>
+                      </a>
                       <button
                         class="bg-[#ECECEC] text-sm py-2 px-5 text-[#A6A6A6] rounded-xl font-semibold hover:shadow-btn w-1/2 md:w-auto"
                       >
@@ -328,14 +340,9 @@
             </div>
           </div>
 
-          <!-- <div class="circle absolute -left-12 -bottom-16"> -->
-          <!-- <div
-            class="absolute -left-2 -bottom-2 bg-[#33D9EF] w-6 h-6 rounded-full animtaion-infinite"
-          ></div> -->
           <div
             class="bg-[#F48C06] md:w-28 md:h-28 w-20 h-20 absolute -bottom-12 -right-12 rounded-full animtaion-infinite"
           ></div>
-          <!-- </div> -->
         </section>
       </div>
     </main>
