--- a/visible-profile.html
+++ b/visible-profile.html
@@ -31,7 +31,7 @@
             class="w-[70%] bg-white h-screen flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="dashboard.html">
+              <a href="./index.html">
                 <figure class="w-full px-5 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -115,7 +115,27 @@
                 </a>
               </li>
 
-              <li>
+              <li class="relative">
+                <a href="create-post.html" class="bg-green-600">
+                  <div
+                    class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
+                  ></div>
+                  <button
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-4 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
+                  >
+                    <img
+                      src="./utils/images/icon-13.svg"
+                      alt="Icon"
+                      loading="lazy"
+                      class="brightness-0 invert"
+                    />
+                    Visible Profile
+                  </button>
+                </a>
+              </li>
+
+
+              <!-- <li>
                 <a
                   href="./visible-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
@@ -129,7 +149,7 @@
                     >Visible Profiles</span
                   >
                 </a>
-              </li>
+              </li> -->
 
               <li class="flex-1 flex items-end mb-5">
                 <a
@@ -152,10 +172,10 @@
         </aside>
 
       <section class="w-full relative h-screen overflow-hidden">
-        <div class="w-[90%] mx-auto">
+        <div class="w-[95%] mx-auto">
           <div class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4 pb-5 lg:pb-2 ">
               <div class="flex justify-between">
-                <a href="dashboard.html">
+                <a href="./index.html">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -198,7 +218,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-8 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -211,13 +231,13 @@
 
           <div class="center">
             <div class="h-[13vh]">
-              <p class="text-clr_black text-xs lg:text-sm flex gap-1">PairTime <span class="font-extrabold">></span> Visible Profile <span class="hidden text-clr_black" id="show-profiles-link"><b class="font-extrabold">></b> Show All </span></p>
+              <p class="text-clr_black text-xs lg:text-sm flex gap-1">PairTime <span class="font-light">></span> Visible Profile <span class="hidden text-clr_black" id="show-profiles-link"><b class="font-light">></b> Show All </span></p>
                   
               <div class="flex justify-between items-center mt-2 mb-6">
-                <p class="text-clr_black text-base lg:text-xl font-bold flex-1 ">
+                <p class="text-clr_black text-base lg:text-xl font-semibold flex-1 ">
                   You have no services available!
                 </p>
-                <p class="mr-4 text-xs">
+                <p class="mr-4 text-xs hidden" id="service-number">
                   You have <span class="font-bold">(124)</span> services
                   available in this action
                 </p>
@@ -229,7 +249,7 @@
                   </a>
                 </button> -->
 
-                <button class="bg-clr_blue text-sm py-2 px-4 text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
+                <button class="bg-clr_blue text-sm py-2 px-4 font-semibold text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
                 id="show-all-btn"
                 >Show All</button>
               </div>
@@ -260,9 +280,11 @@
                     </div>
                   </div>
                   <div class="min-w-max">
-                    <button class="bg-clr_blue text-sm py-3 px-4 text-white rounded-lg hover:shadow-btn">
-                      Request a Pairing session
-                    </button>
+                    <a href="./search-detail.html">
+                      <button  class="bg-clr_blue text-sm py-3 px-4 text-white font-semibold rounded-lg hover:shadow-btn">
+                        Request a Pairing session
+                      </button>
+                    </a>
                   </div>
                 </div>
                 <p class="text-sm text-clr_black capitalize pt-2">In 2015, <a href=""
@@ -316,9 +338,11 @@
                     </div>
                   </div>
                   <div class="min-w-max">
-                    <button class="bg-clr_blue text-sm py-3 px-4 text-white rounded-lg hover:shadow-btn">
-                      Request a Pairing session
-                    </button>
+                    <a href="./search-detail.html">
+                      <button class="bg-clr_blue text-sm py-3 px-4 text-white font-semibold rounded-lg hover:shadow-btn">
+                        Request a Pairing session
+                      </button>
+                    </a>
                   </div>
                 </div>
                 <p class="text-sm text-clr_black capitalize pt-2">In 2015, <a href=""
@@ -400,6 +424,7 @@
     // }
   </script>
   <script src="./utils/js/dashboard.js"></script>
+  <script src="./utils/js/visibleProfile.js"></script>
 </body>
 
 </html>
